@@ -1,0 +1,5 @@
+<?php
+
+echo serialize(unserialize($_POST['data']));
+
+?>
